# fractals

./: CMakeLists.txt  Makefile  README.txt  main.cpp
fractals/: animated_tree.cpp  factory.cpp  factory.h  fractal.h  hilbert_curve.cpp  julia.cpp  koch_snowflake.cpp  mandelbrot.cpp  menger.cpp  plasma.cpp  pythagoras.cpp  sierpinski.cpp
